  * Process interwiki links only if the link does not contain a virtual wiki
    or namespace.  Thus if a wiki has a namespace of "Test" and an interwiki
    of "Test", the link "Test:Topic" will parse as an internal link rather than
    an interwiki link.

Translation Updates:

  * Updated German translations (axelclk).


0.8.4
=====

Bugfixes:


0.8.3
=====

Bugfixes:

  * When renaming a topic, the data could be incorrectly stored in the database
    if the new topic name included an underscore or a plus sign.  Test case
    provided by Rudi Wiesmayr.
  * Links to a virtual wiki page with the same page name ("[[:test:PageName]]")
    will now parse correctly again.  Reported by Tom Schueller.
  * Update the default footer page's copyright notice to 2010.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).
  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


0.8.2
=====

New Features:

  * Updated spam filter patterns.
  * Update the default StartingPoints page with additional help info.

Bugfixes:

  * Fix MS SQL errors (hanspeterklapf).

Translation Updates:

  * Updated French translations (Guillaume_FRANCOIS55).
  * Updated German translations (axelclk).


0.8.1
=====

Bugfixes:

  * A link from a topic page to itself should be formatted as plain bold text,
    not as a link.  Reported by floatingworld.
  * XML imports of redirect topics were not redirecting properly.
  * Fix non-fatal MySQL upgrade warnings.  Reported by an anonymous user.
  * Fix code that could potentially leave database connections open during
    authentication.
  * Fix an issue that caused the Special:Maintenance "database migration"
    functionality to fail.
  * Templates will now be listed on Special:Allpages.  Reported by
    floatingworld.

Translation Updates:

  * Updated Chinese translations (tan9).
  * Updated Polish translations (dlpa).


0.8.0
=====

New Features:
